# DoraMate

./: README.md
design/: README
docs/: 00-技术实现路径摘要.md  01-项目概述.md  06-Axum 后端架构.md  07-文件系统架构.md  08-可视化编辑器规划.md  09-DORA 本地集成.md  10-YAML可视化功能.md  11-MVP开发计划.md  12-数据模型设计.md  13-验收标准.md  14-本地执行架构设计.md  15-工业级UI组件库设计.md  16-系统迁移规划.md  UserPersonV1.0.md  设计方案V1.1.md
docs/design/: 00设计概览  01信息架构  03节点组件设计.md  04画布与连线设计.md  05交互状态设计.md  06运行与系统反馈  07文件与YAML体验  08设计边界与未来规划  doraMate-ui-spec.md  edge-and-canvas-design.md  interaction-states.md  node-component-design.md  布局设计.md
docs/design/docs/design/: node-component-design.md
docs/share/: GEO友好实践指南V1.0  demo视频脚本
docs/week1_research/: research_notes.md
doramate-examples/: Cargo.toml  README.md  dataflow.yml  test.yml  test.yml.layout.json  xydataflow.yml
doramate-examples/object_detection/: Cargo.toml
doramate-examples/object_detection/src/: main.rs  model.rs  utils.rs
doramate-examples/recorder/: Cargo.toml  build.rs
doramate-examples/recorder/src/: main.rs  utils.rs
doramate-examples/viewer/: Cargo.toml  build.rs
doramate-examples/viewer/src/: main.rs  utils.rs
doramate-examples/webcam/: Cargo.toml  build.rs
doramate-examples/webcam/src/: main.rs
doramate-frontend/: Cargo.toml  README.md  index.html  parameter_editor.css
doramate-frontend/src/: lib.rs  node_registry.rs  types.rs
doramate-frontend/src/components/: canvas.rs  confirm_dialog.rs  connection.rs  log_panel.rs  minimal_parameter_editor.rs  mod.rs  node_panel.rs  property_panel.css  property_panel.rs  save_dialog.rs  shortcut_settings.css  shortcut_settings.rs  status_panel.rs  toolbar.css  toolbar.rs
doramate-frontend/src/utils/: api.rs  converter.rs  file.rs  geometry.rs  layout_sidecar.rs  mod.rs  recent_files.rs  shortcuts.rs
doramate-frontend/style/: node_panel.css
doramate-localagent/: Cargo.toml  README.md
doramate-localagent/src/: main.rs
src/: index.css
src/components/editor/: Canvas.tsx  ConnectionInfoPopover.tsx  ConnectionLine.tsx  CustomNodeDialog.tsx  NodeCard.tsx  NodeEditor.tsx  NodePalette.tsx  PropertyPanel.tsx  Toolbar.tsx
src/data/: nodeTemplates.ts
src/hooks/: useNodeEditor.ts
src/pages/: Index.tsx
src/types/: node.ts
