[package]
name = "doramate-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
 "File",
 "FileList",
 "FileReader",
 "Blob",
 "BlobPropertyBag",
 "Url",
 "Window",
 "Document",
 "Element",
 "EventTarget",
 "HtmlAnchorElement",
 "HtmlInputElement",
 "MouseEvent",
 "DragEvent",
 "DataTransfer",
 "SvgElement",
 "SvgAnimatedTransformList",
 "DomMatrix",
 "Storage",
 "Headers",
 "Request",
 "Response",
 "RequestInit",
 "WebSocket",
 "CloseEvent",
 "MessageEvent",
 "ErrorEvent",
]}
gloo-storage = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
