[package]
name = "doramate-localagent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doramate-localagent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = "0.5"
anyhow = "1.0"
futures-util = "0.3"
rfd = "0.15"
tokio-tungstenite = "0.21"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
