[package]
name = "object_detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = "0.3.13"
opencv = { version = "0.98.0", features = ["videoio", "imgcodecs"] }
anyhow = "1.0"

# Candle 机器学习库
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }

# 可选：如需 CUDA 加速（需要 CUDA Toolkit），取消下面注释
# candle-core = { version = "0.9", features = ["cuda"] }
# candle-nn = { version = "0.9", features = ["cuda"] }
hf-hub = "0.4" # 用于下载模型
tokenizers = "0.15"

# 图像处理辅助
image = "0.24"
byteorder = "1.5"

tracing = "0.1.40"

[features]
default = [] 
